--- a/templates/index.html
+++ b/templates/index.html
@@ -199,8 +199,7 @@
                     class="dropdown">
                     <option value="{{ 'High Priority' if language == 'english' else 'أولوية قصوى' }}">{{ 'High Priority'
                         if language == 'english' else 'أولوية قصوى' }}</option>
-                    <option value="{{ 'Medium Priority' if language == 'english' else 'أولوية متوسطة' }}">{{ 'Medium
-                        Priority'
+                    <option value="{{ 'Medium Priority' if language == 'english' else 'أولوية متوسطة' }}">{{ 'Medium Priority'
                         if language == 'english' else 'أولوية متوسطة' }}</option>
                     <option value="{{ 'Low Priority' if language == 'english' else 'أولوية منخفضة' }}">{{ 'Low Priority'
                         if language == 'english' else 'أولوية منخفضة' }}</option>
