--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,11 @@
         <div class="form-group">
             <label for="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}">{{ 'Contact Number' if
                 language == 'english' else 'رقم الاتصال' }}</label>
-            <input type="text" id="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}"
-                name="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}" placeholder="### ### ####"
-                pattern="[0-9]{10}" maxlength="10" minlength="10">
+                <input type="text" id="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}"
+                name="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}" 
+                placeholder="05# ### ####"
+                pattern="^(056|052|050|055|058|054)[0-9]{7}$"
+                maxlength="10" minlength="10" required>            
         </div>
 
         <div class="form-group">
@@ -118,9 +120,13 @@
         <div class="form-group">
             <label for="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}">{{ 'Account Number' if
                 language == 'english' else 'رقم الحساب' }}</label>
-            <input type="text" id="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}"
-                name="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}" placeholder="############"
-                pattern="\d{12}" maxlength="12" minlength="12">
+                <input type="text" id="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}"
+                name="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}" 
+                placeholder="2###########" 
+                pattern="2\d{11}" 
+                maxlength="12" 
+                minlength="12">
+         
         </div>
 
         <div class="form-group">
