--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 language == 'english' else 'رقم التقرير' }}</label>
             <input type="text" id="{{ 'report_number' if language == 'english' else 'رقم_التقرير' }}"
                 name="{{ 'report_number' if language == 'english' else 'رقم_التقرير' }}"
-                placeholder="Enter Report Number">
+                placeholder="Enter Report Number" required>
         </div>
 
         <div class="form-group">
@@ -25,7 +25,7 @@
                 language == 'english' else 'تاريخ التدقيق' }}</label>
             <input type="date" id="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}"
                 name="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}"
-                placeholder="Enter Date of Audit">
+                placeholder="Enter Date of Audit" required>
         </div>
 
         <div class="form-group">
@@ -64,7 +64,7 @@
             <label for="{{ 'location' if language == 'english' else 'الموقع' }}">{{ 'Location' if language == 'english'
                 else 'الموقع' }}</label>
             <input type="text" id="{{ 'location' if language == 'english' else 'الموقع' }}"
-                name="{{ 'location' if language == 'english' else 'الموقع' }}" placeholder="Enter Location">
+                name="{{ 'location' if language == 'english' else 'الموقع' }}" placeholder="Enter Location" required>
         </div>
 
         <div class="form-group">
@@ -108,14 +108,14 @@
             <label for="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}">{{ 'Number of Bedrooms'
                 if language == 'english' else 'عدد غرف النوم' }}</label>
             <input type="number" id="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}"
-                name="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}" value="3" min="1">
+                name="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}" value="3" min="1" required>
         </div>
 
         <div class="form-group">
             <label for="{{ 'number_of_floors' if language == 'english' else 'عدد_الطوابق' }}">{{ 'Number of Floors' if
                 language == 'english' else 'عدد الطوابق' }}</label>
             <input type="number" id="{{ 'number_of_floors' if language == 'english' else 'عدد_الطوابق' }}"
-                name="{{ 'number_of_floors' if language == 'english' else 'عدد_الطوابق' }}" value="1" min="1">
+                name="{{ 'number_of_floors' if language == 'english' else 'عدد_الطوابق' }}" value="1" min="1" required>
         </div>
         <div class="form-group">
             <label for="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}">{{ 'Account Number' if
@@ -125,7 +125,7 @@
                 placeholder="2###########" 
                 pattern="2\d{11}" 
                 maxlength="12" 
-                minlength="12">
+                minlength="12" required>
          
         </div>
 
