--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 language == 'english' else 'تاريخ التدقيق' }}</label>
             <input type="date" id="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}"
     name="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}"
-    placeholder="Enter Date of Audit" required>
+    placeholder="Enter Date of Audit">
 
         </div>
 
