--- a/templates/language_selection.html
+++ b/templates/language_selection.html
@@ -9,10 +9,10 @@
 </head>
 <body class = "lang-selection-body">
 <div class="container">
-    <form action="{{ url_for('index', language='english') }}">
+    <form action="{{ url_for('index', language="english") }}">
         <button type="submit" class="lang-button">English</button>
     </form>
-    <form action="{{ url_for('index', language='arabic') }}">
+    <form action="{{ url_for('index', language="arabic") }}">
         <button type="submit" class="lang-button">العربية</button>
     </form>
 </div>
