--- a/templates/index.html
+++ b/templates/index.html
@@ -13,17 +13,17 @@
         <div class="form-group">
             <label for="{{ 'report_number' if language == 'english' else 'رقم_التقرير' }}">{{ 'Report Number' if language == 'english' else 'رقم التقرير' }}</label>
             <input type="text" id="{{ 'report_number' if language == 'english' else 'رقم_التقرير' }}" name = "{{ 'report_number' if language == 'english' else 'رقم_التقرير' }}" 
-            placeholder="Enter Report Number">
+            placeholder="Enter Report Number" required>
         </div>
 
         <div class="form-group">
             <label for="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}">{{ 'Date of Audit' if language == 'english' else 'تاريخ التدقيق' }}</label>
-            <input type="date" id="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}" name="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}" placeholder="Enter Date of Audit">
+            <input type="date" id="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}" name="{{ 'date_of_audit' if language == 'english' else 'تاريخ_التدقيق' }}" placeholder="Enter Date of Audit" required>
         </div>
 
         <div class="form-group">
             <label for="{{ 'type_of_audit' if language == 'english' else 'نوع_التدقيق' }}">{{ 'Type of Audit' if language == 'english' else 'نوع التدقيق' }}</label>
-            <select id="{{ 'type_of_audit' if language == 'english' else 'نوع_التدقيق' }}" name="{{ 'type_of_audit' if language == 'english' else 'نوع_التدقيق' }}" >
+            <select id="{{ 'type_of_audit' if language == 'english' else 'نوع_التدقيق' }}" name="{{ 'type_of_audit' if language == 'english' else 'نوع_التدقيق' }}" required>
                 <option value="{{ 'Home Visit' if language == 'english' else 'زيارة منزلية' }}">{{ 'Home Visit' if language == 'english' else 'زيارة منزلية' }}</option>
                 <option value="{{ 'Video Call' if language == 'english' else 'مكالمة فيديو' }}">{{ 'Video Call' if language == 'english' else 'مكالمة فيديو' }}</option>
                 <option value="{{ 'Phone Call' if language == 'english' else 'مكالمة هاتفية' }}">{{ 'Phone Call' if language == 'english' else 'مكالمة هاتفية' }}</option>
@@ -39,12 +39,12 @@
         <div class="form-group">
             <label for="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}">{{ 'Contact Number' if language == 'english' else 'رقم الاتصال' }}</label>
             <input type="text" id="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}" name="{{ 'contact_number' if language == 'english' else 'رقم_الاتصال' }}"
-             placeholder="### ### ####" pattern="[0-9]{10}" maxlength="10" minlength="10">
+             placeholder="05# ### ####" pattern="05[04658][0-9]{7}" maxlength="10" minlength="10" required>
         </div>
 
         <div class="form-group">
             <label for="{{ 'location' if language == 'english' else 'الموقع' }}">{{ 'Location' if language == 'english' else 'الموقع' }}</label>
-            <input type="text" id="{{ 'location' if language == 'english' else 'الموقع' }}" name="{{ 'location' if language == 'english' else 'الموقع' }}" placeholder="Enter Location">
+            <input type="text" id="{{ 'location' if language == 'english' else 'الموقع' }}" name="{{ 'location' if language == 'english' else 'الموقع' }}" placeholder="Enter Location" required>
         </div>
 
         <div class="form-group">
@@ -54,7 +54,7 @@
 
         <div class="form-group">
             <label for="{{ 'type_of_accommodation' if language == 'english' else 'نوع_الإقامة' }}">{{ 'Type of Accommodation' if language == 'english' else 'نوع الإقامة' }}</label>
-            <select id="{{ 'type_of_accommodation' if language == 'english' else 'نوع_الإقامة' }}" name="{{ 'type_of_accommodation' if language == 'english' else 'نوع_الإقامة' }}">
+            <select id="{{ 'type_of_accommodation' if language == 'english' else 'نوع_الإقامة' }}" name="{{ 'type_of_accommodation' if language == 'english' else 'نوع_الإقامة' }}" required>
                 <option value="{{ 'Villa' if language == 'english' else 'فيلا' }}">{{ 'Villa' if language == 'english' else 'فيلا' }}</option>
                 <option value="{{ 'Mansion' if language == 'english' else 'قصر' }}">{{ 'Mansion' if language == 'english' else 'قصر' }}</option>
                 <option value="{{ 'Apartments' if language == 'english' else 'شقة' }}">{{ 'Apartments' if language == 'english' else 'شقة' }}</option>
@@ -74,7 +74,7 @@
         
         <div class="form-group">
             <label for="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}">{{ 'Number of Bedrooms' if language == 'english' else 'عدد غرف النوم' }}</label>
-            <input type="number" id="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}" name="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}" value="3" min="1">
+            <input type="number" id="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}" name="{{ 'number_of_bedrooms' if language == 'english' else 'عدد_غرف_النوم' }}" value="3" min="1" required>
         </div>
         
         <div class="form-group">
@@ -84,7 +84,7 @@
         <div class="form-group">
             <label for="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}">{{ 'Account Number' if language == 'english' else 'رقم الحساب' }}</label>
             <input type="text" id="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}" name="{{ 'account_number' if language == 'english' else 'رقم_الحساب' }}" 
-            placeholder="############" pattern="\d{12}" maxlength="12"  minlength="12">
+            placeholder="2###########" pattern="\d{12}" maxlength="12"  minlength="12" required>
         </div>
         
         <div class="form-group">
@@ -107,25 +107,25 @@
         <div class="form-group">
             <label for="{{ 'ac_systems' if language == 'english' else 'أنظمة_تكييف' }}">{{ 'AC Systems' if language == 'english' else 'أنظمة تكييف' }}</label>
             <textarea id="{{ 'ac_systems' if language == 'english' else 'أنظمة_تكييف' }}" name="{{ 'ac_systems' if language == 'english' else 'أنظمة_تكييف' }}" 
-            placeholder="Enter AC systems"></textarea>
+            placeholder="Enter AC systems" required></textarea>
         </div>
         
         <div class="form-group">
             <label for="{{ 'lighting' if language == 'english' else 'إضاءة' }}">{{ 'Lighting' if language == 'english' else 'إضاءة' }}</label>
             <textarea id="{{ 'lighting' if language == 'english' else 'إضاءة' }}" name= "{{ 'lighting' if language == 'english' else 'إضاءة' }}" 
-            placeholder="Enter lighting details"></textarea>
+            placeholder="Enter lighting details" required></textarea>
         </div>
         
         <div class="form-group">
             <label for="{{ 'water_taps' if language == 'english' else 'حنفيات_المياه' }}">{{ 'Water Taps' if language == 'english' else 'حنفيات المياه' }}</label>
             <textarea id="{{ 'water_taps' if language == 'english' else 'حنفيات_المياه' }}" name="{{ 'water_taps' if language == 'english' else 'حنفيات_المياه' }}" 
-            placeholder="Enter water taps details"></textarea>
+            placeholder="Enter water taps details" required></textarea>
         </div>
 
         <div class="form-group">
             <label for="{{ 'water_heaters' if language == 'english' else 'سخانات_المياه' }}">{{ 'Water Heaters' if language == 'english' else 'سخانات المياه' }}</label>
             <textarea id="{{ 'water_heaters' if language == 'english' else 'سخانات_المياه' }}" name="{{ 'water_heaters' if language == 'english' else 'سخانات_المياه' }}" 
-            placeholder="Enter water heaters details"></textarea>
+            placeholder="Enter water heaters details" required></textarea>
         </div>
 
         <div class="form-group">
@@ -151,8 +151,6 @@
         </div>
         {% endfor %}
     </div>
-
-        <label type="hidden" id="developers" name="developers"  class='Easter_egg'> Dev: Muhammad Mbarak, Mohd Hasanul Alam and Shouq Almansoori</label>
         <div class="form-group">
             <input type="hidden" id="language" name="language" value="{{ 'english' if language == 'english' else 'arabic' }}">
         </div>
