--- a/templates/index.html
+++ b/templates/index.html
@@ -283,9 +283,9 @@ function loadAllInputs() {
   });
 }
 
-window.onload = function() {
+document.addEventListener('DOMContentLoaded', function() {
   loadAllInputs();
-};
+});
 
     </script>
     
