--- a/templates/index.html
+++ b/templates/index.html
@@ -326,6 +326,9 @@
             loadAllInputs();
         });
         function saveInput(element) {
+            if (element.type === 'checkbox') {
+                localStorage.setItem(element.id, element.checked);
+            }
             localStorage.setItem(element.id, element.value);
         }
 
@@ -334,7 +337,10 @@
 
             elements.forEach(function (element) {
                 var savedValue = localStorage.getItem(element.id);
-                if (savedValue !== null) {
+                if (element.type === 'checkbox') {
+                    element.checked = (savedValue === 'true');
+                }
+                else if (savedValue !== null) {
                     element.value = savedValue;
                 }
 
